# couchbase-cluster-admin

./: pyproject.toml
.github/workflows/: ci.yml
couchbase_cluster_admin/: client.py  cluster.py  exceptions.py  ssh_tunnel.py
tests/: docker-compose.yml  test_backup.py  test_cluster.py  test_couchbase_cluster_admin.py  test_integration.py
