[tool.poetry]
name = "couchbase-cluster-admin"
version = "0.1.0"
description = ""
authors = ["Sven Ulland <sven.ulland@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^7"
black = "^22.3.0"
responses = "^0.20.0"
pytest-docker = "^0.11.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
