[tool.poetry]
name = "couchbase-cluster-admin"
version = "0.2.0"
description = ""
authors = ["Sven Ulland <sven.ulland@gmail.com>", "Cosimo Streppone <cosimo@streppone.it>"]

[tool.poetry.dependencies]
python = "^3.8"
sshtunnel = "^0.4.0"

[tool.poetry.dev-dependencies]
pytest = "^7"
black = "^22.3.0"
responses = "^0.20.0"
jmespath = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
